--- a/Plot_fio_txt.html
+++ b/Plot_fio_txt.html
@@ -108,7 +108,7 @@
 
 <div class="row">
   <label for="xMin">X min (optional):</label>
-  <input id="xMin" type="number" style="width:120px;">
+  <input id="xMin" type="number" value="0" style="width:120px;">
 </div>
 
 <div class="row">
