--- a/Plot_fio_txt.html
+++ b/Plot_fio_txt.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Flexible Upload & Plot</title>
+  <title>Plot .txt .fio .dat ...</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- Chart.js for plotting -->
@@ -43,7 +43,7 @@
 </head>
 
 <body>
-<h1>Flexible Upload & Plot</h1>
+<h1>Plot .txt .fio .dat ...</h1>
 <p class="note">
   Upload a text-like data file (e.g. .txt, .dat, .fio, .flt, .gve, .csv).<br>
   You can cut off header/footer lines, choose which columns to use as X/Y,
